--- a/.azurepipelines/Ubuntu-GCC5.yml
+++ b/.azurepipelines/Ubuntu-GCC5.yml
@@ -11,27 +11,24 @@
 # SPDX-License-Identifier: BSD-2-Clause-Patent
 ##
 
-resources:
-  repositories:
-    - repository: mu_devops
-      type: github
-      endpoint: microsoft
-      name: microsoft/mu_devops
-      ref: refs/tags/v3.0.0
-
 variables:
 - group: architectures-arm64-x86-64
 - group: tool-chain-ubuntu-gcc
 
-jobs:
-- template: Jobs/PrGate.yml@mu_devops
+extends:
+  template: MuDevOpsWrapper.yml
   parameters:
-    arch_list: $(arch_list)
-    do_ci_build: true
+    do_ci_build: true	
     do_ci_setup: true
-    packages: IpmiFeaturePkg
-    target_list: DEBUG,RELEASE,NO-TARGET,NOOPT
-    tool_chain_tag: $(tool_chain_tag)
-    vm_image: $(vm_image)
     container_build: true
-    linux_container_image: ghcr.io/microsoft/mu_devops/ubuntu-22-build:4a1f8d3
+    os_type: Linux
+    build_matrix:
+      TARGET_IPMI:
+        Pkgs: 'IpmiFeaturePkg'
+        Targets: 'DEBUG,RELEASE,NO-TARGET,NOOPT'
+        ArchList: $(arch_list)
+      TARGET_IPMI_ARM:
+        Pkgs: 'IpmiFeaturePkg'
+        Targets: 'DEBUG,RELEASE,NO-TARGET,NOOPT'
+        ArchList: $(arch_list)
+        SelfHostAgent: true
